# Put your release notes or change log information
# in here.
R0-9:
Release candidate.
TODO: Add autoSaveRestore.

R1-0:
The first release.

R1-1:
Add PINI YES to local PVs
Add iocAdmin and EVR db
Add delay for CA
Make timer delay longer and changable on console
Add more debug info and organize level 4 for 120Hz, level 3 for 30Hz
Remove connection callback and access right callback
Compile against RTEMS 4.9.1

R1-2:
Enable the second Ethernet port with BSD stack
Clean up camon.c
Fix typo of error message. Add ca_flush_io just in case. Add option for monitoring pulsePVs
Add byte-order swap
Add option to use ca_add_event
Use original PVs rather than BSA PVs

R1-3:
Clean up, print full array with printf in camon.c
Add more comments, add diagnostics info, add ca_clear_channel for epicsExit and fix bug by init dataAvailable = TRUE
Copy ebeamInfoPreFill into ebeamInfo everytime to correct binvert behaviour
The first version in production.

BLD-R1-4:
Add drive device support
Add records to read calc result
Move start into drvSup
More beam code for rate less than 30Hz

TODO: Somehow ca_context_destroy causes problem
      Takes long time to connect to a external PV
      Local PV callback has wrong number of elements and wrong value
      Some CA env does not work
      Multicast on RTEMS
